<resources>
    <string name="app_name">DoSoptTemplate</string>
    <string name="sopt_title">Welcome to SOPT</string>
    <string name="id_title">ID</string>
    <string name="id_hint">아이디를 입력하세요</string>

    <string name="intro_hint">자기소개를 입력하세요</string>
    <string name="intro_title">자기소개</string>
    <string name="pw_title">비밀번호</string>
    <string name="pw_hint">비밀번호를 입력하세요</string>

    <string name="nickName_title">닉네임</string>
    <string name="nickName_hint">닉네임을 입력하세요</string>
    <string name="mbti_title">MBTI</string>
    <string name="mbti_hint">MBTI를 입력하세요</string>

    <string name="music_title">Music</string>
    <string name="music_hint">곡 제목을 입력하세요</string>
    <string name="artist_title">Artist</string>
    <string name="artist_hint">가수를 입력하세요</string>

    <string name="signUp_btn">회원가입</string>
    <string name="login_btn">로그인하기</string>

    <string name = "name">이름</string>

    <string name = "android_title">Let\'s go anDOroid</string>

    <string name = "sign_up_title">SIGN UP</string>
    <string name = "music">my music</string>
    <string name = "musicArtist">artist1</string>

    <string name = "editMyPageTitle">Edit My Page</string>
    <string name = "finish">완료</string>

    <string name="loginSuccess">로그인에 성공하였고 유저 아이디는</string>
    <string name = "end">입니다.</string>
    <string name="serverError">서버 에러 발생</string>

    <string name = "signUpSuccess">회원가입 성공!</string>
    <string name = "signUpFail">회원가입 실패.</string>

    <string name = "loginButtonClicked">로그인 버튼이 클릭 되었습니다.</string>
    <string name = "loginButtonNotClicked">로그인 버튼을 클릭해주세요.</string>

</resources>