<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="org.sopt.dosopttemplate.presentation.editMyPage.EditMyPageViewModel" />

        <variable
            name="profile"
            type="org.sopt.dosopttemplate.data.Profile" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/editMyPageTitle"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/img_monkey"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@{profile.id}"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/iv_main"
            app:layout_constraintTop_toTopOf="@id/iv_main" />


        <TextView
            android:id="@+id/tv_introTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/intro_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/et_artist" />

        <EditText
            android:id="@+id/tv_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/intro_hint"
            android:singleLine="true"
            android:text="@={viewModel.intro}"
            android:textColor="@color/grey"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_introTitle" />


        <TextView
            android:id="@+id/tv_mbtiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mbti_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/iv_main" />

        <EditText
            android:id="@+id/et_mbti"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/mbti_hint"
            android:singleLine="true"
            android:text="@={viewModel.mbti}"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_mbtiTitle"
            app:layout_constraintTop_toBottomOf="@id/tv_mbtiTitle" />

        <TextView
            android:id="@+id/tv_musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/music_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/et_mbti" />

        <EditText
            android:id="@+id/et_music"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/music_hint"
            android:singleLine="true"
            android:text="@={viewModel.musicTitle}"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_musicTitle"
            app:layout_constraintTop_toBottomOf="@id/tv_musicTitle" />

        <EditText
            android:id="@+id/et_artist"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:hint="@string/artist_hint"
            android:singleLine="true"
            android:text="@={viewModel.musicArtist}"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@id/tv_musicTitle"
            app:layout_constraintTop_toBottomOf="@id/et_music" />

        <Button
            android:id="@+id/bt_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>