<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type = "android.view.View"/>
        <variable
            name="viewModel"
            type="org.sopt.dosopttemplate.presentation.myPage.MyPageViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <ImageView
            android:id="@+id/iv_main"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/img_monkey"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/nickName_title"
            android:textSize="30dp"
            app:layout_constraintStart_toEndOf="@id/iv_main"
            app:layout_constraintTop_toTopOf="@id/iv_main" />

        <TextView
            android:id="@+id/tv_intro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_main"
            app:layout_constraintStart_toStartOf="@id/tv_nickName" />

        <TextView
            android:id="@+id/tv_IDTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/id_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_intro" />

        <TextView
            android:id="@+id/tv_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_IDTitle" />

        <TextView
            android:id="@+id/tv_mbtiTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/mbti_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_ID" />
        <TextView
            android:id="@+id/tv_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_mbtiTitle" />
        <TextView
            android:id="@+id/tv_musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/music_title"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_mbti" />
        <TextView
            android:id="@+id/tv_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/grey"
            android:textSize="25dp"
            app:layout_constraintStart_toStartOf="@id/iv_main"
            app:layout_constraintTop_toBottomOf="@id/tv_musicTitle" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FABEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_edit_white_24"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>